core_directory/tests/fixtures/valid_no_sig/valid_2.core
CAPI=2:
name: vendor:lib:core:2.3.4-beta
description: "Another valid core file with a pre-release version."
provider:
  name: github
  user: myuser
  repo: myrepo
  version: "release-2024-09"